--- a/line_tracking/config/line_tracking.yaml
+++ b/line_tracking/config/line_tracking.yaml
@@ -1,5 +1,5 @@
 line_detector:
-  kp: 0.30
+  kp: 0.22
   kd: 0.05
   base_speed: 0.22
   bin_thresh: 110
@@ -9,10 +9,9 @@ line_detector:
   min_area: 300
   min_white_pixels: 300
   stop_when_lost: true
-  max_omega: 0.6
+  max_omega: 0.5
   angle_thresh_deg: 85.0
   err_deadband: 0.02
-  steer_sign: 1.0
 
 bts7960_diff_driver:
   pins:
@@ -26,7 +25,7 @@ bts7960_diff_driver:
     l_en_left: 18
   pwm_hz: 1000
   deadtime_s: 0.005
-  max_duty: 60.0
+  max_duty: 35
   min_duty: 15.0
   deadzone: 0.02
   cmd_timeout: 0.5
@@ -34,3 +33,7 @@ bts7960_diff_driver:
   max_angular: 1.5     # rad/s 가정치
   invert_left: true
   invert_right: false
+  trim_left:  1.00
+  trim_right: 1.00    # ← 우측이 빠르면 0.95 ~ 0.85 범위에서 시작
+  min_duty_left:  12.0 # 좌측 출발이 굼뜨면 약간 올림
+  min_duty_right: 12.0
