--- a/line_tracking/config/line_tracking.yaml
+++ b/line_tracking/config/line_tracking.yaml
@@ -1,7 +1,9 @@
 line_detector:
-  kp: 0.22
-  kd: 0.05
-  base_speed: 0.22
+  kp: 0.24
+  kd: 0.06
+  kh: 0.45
+  base_speed: 0.12
+  min_speed: 0.10
   bin_thresh: 110
   invert: true
   roi_y_start: 0.70
@@ -9,9 +11,16 @@ line_detector:
   min_area: 300
   min_white_pixels: 300
   stop_when_lost: true
-  max_omega: 0.5
+  max_omega: 0.55
   angle_thresh_deg: 85.0
-  err_deadband: 0.02
+  err_deadband: 0.03
+  ema_alpha: 0.35
+  use_adaptive: true
+  search_omega: 0.3
+  search_ms: 600
+  use_lookahead: true
+  lookahead_gap: 0.4
+  
 
 bts7960_diff_driver:
   pins:
@@ -24,16 +33,16 @@ bts7960_diff_driver:
     r_en_left: 5
     l_en_left: 18
   pwm_hz: 1000
-  deadtime_s: 0.005
+  deadtime_s: 0.01
   max_duty: 35
   min_duty: 15.0
   deadzone: 0.02
   cmd_timeout: 0.5
   max_linear: 0.5      # m/s 가정치
-  max_angular: 1.5     # rad/s 가정치
+  max_angular: 2.0     # rad/s 가정치
   invert_left: true
   invert_right: false
   trim_left:  1.00
   trim_right: 1.00    # ← 우측이 빠르면 0.95 ~ 0.85 범위에서 시작
-  min_duty_left:  12.0 # 좌측 출발이 굼뜨면 약간 올림
-  min_duty_right: 12.0
+  min_duty_left:  14.0 # 좌측 출발이 굼뜨면 약간 올림
+  min_duty_right: 14.0
